# firecracker

./: Cargo.toml  setup.sh  test.sh
.buildkite/: common.py  pipeline_ab.py  pipeline_perf.py  pipeline_pr.py  pipeline_test_debug.py
.github/workflows/: main.yml  markdown_link_checker.yml  send_release_notification.yml
docs/: tracing.md
resources/tests/msr/: msr_reader.sh
run/: config.json
src/acpi-tables/: Cargo.toml
src/acpi-tables/src/: aml.rs  dsdt.rs  fadt.rs  gtdt.rs  lib.rs  madt.rs  pptt.rs  rsdp.rs  xsdt.rs
src/firecracker/src/: main.rs
src/jailer/src/: env.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs  persist.rs
src/vmm/src/acpi/: aarch64.rs  mod.rs  x86_64.rs
src/vmm/src/arch/: mod.rs
src/vmm/src/arch/x86_64/: mod.rs  (+1 more)
src/vmm/src/device_manager/: legacy.rs  mmio.rs  persist.rs  resources.rs
src/vmm/src/io_uring/: mod.rs
src/vmm/src/logger/: metrics.rs
src/vmm/src/vmm_config/: boot_source.rs
src/vmm/src/vstate/: vm.rs
src/vmm/tests/: io_uring.rs
tests/: conftest.py
tests/framework/: dependencies.txt  microvm.py  utils.py  utils_vsock.py
tests/host_tools/: fcmetrics.py  network.py
tests/integration_tests/functional/: test_cpu_features.py  test_metrics.py  test_snapshot_basic.py
tests/integration_tests/performance/: test_block_performance.py  test_mmds_vsock.py  test_network_latency.py  test_network_tcp_throughput.py  test_snapshot_ab.py  test_snapshot_restore_performance.py  test_vhost_user_metrics.py  test_vsock_throughput.py
tests/integration_tests/security/: test_custom_seccomp.py
tools/: ab_test.py
(+21 files in other folders)
